fix: align

--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -4,7 +4,8 @@
     position: absolute;
     z-index: 1;
     top: -6px;
-    right: 30px;
+    right: 6px;
+    height: 40px;
   }
   #card-container {
     position: relative;
