--- a/src/style.scss
+++ b/src/style.scss
@@ -29,3 +29,7 @@ p {
       color: white!important;
   }
 }
+
+.speed-dial__list {
+  align-items: flex-end!important;
+}
